--- a/frameworks/_posts/1996-01-01-python.markdown
+++ b/frameworks/_posts/1996-01-01-python.markdown
@@ -280,4 +280,13 @@ In another terminal:
 
 When you run the `af update` command on a Django app, AppFog automatically runs the `syncdb` command against the bound database for you as part of the staging process.
 
+At the moment this runs syncdb non-interactively to initialize the database, which causes the following limitations:
+
+  - initially, Django admin (if your app uses it) will be unusable as superusers are not created due to running syncdb non-interactively
+  - fixtures will not be loaded
+  - migration workflow (schema evolution frameworks), such as that of South are not supported.
+
+In order create the admin superuser, install [caldecott](http://blog.cloudfoundry.com/2011/11/17/now-you-can-tunnel-into-any-cloud-foundry-data-service/), 
+it provides an interface similar to `manage.py dbshell`.
+
 More coming soon. Meanwhile, check out [the GitHub repo for our Python Django Jumpstart](https://github.com/appfog/af-python-django).
